[tool.poetry]
name = "rl-franka"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mujoco = "^3.1.3"
numpy = "^1.26.4"
torch = "^2.2.2"
gymnasium = "^0.29.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
